--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_748212_bx8mcejoei9.css">
     <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
