--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CAD/AD提醒 - 鸢尾工作室</title>
+    <title>适航管理辅助系统 - 鸢尾工作室</title>
   </head>
   <body>
     <noscript>
