--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>适航管理辅助系统 - 鸢尾工作室</title>
+    <title>鸢尾维修管理平台 - 鸢尾工作室</title>
   </head>
   <body>
     <noscript>
